<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="48dp"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:text="@string/title"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"/>

    <Button
        android:id="@+id/button_sum"
        android:text="@string/option_sum"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"/>

    <Button
        android:id="@+id/button_sub"
        android:text="@string/option_sub"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"/>

    <Button
        android:id="@+id/button_mul"
        android:text="@string/option_mul"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"/>

    <Button
        android:id="@+id/button_div"
        android:text="@string/option_div"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"/>

    <Button
        android:id="@+id/button_quit"
        android:text="@string/option_quit"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"/>

</LinearLayout>